--- a/templates/city.html
+++ b/templates/city.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
     <p> Hello {{ city }}</p>
+    <p> Below is your weather forecast.</p>
+
+    <p>{{ weather }}</p>
 
     <p><a href="/">Go back </a></p>
 
