--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <title>Weather</title>
 </head>
 <body>
-    <h1>Select a city.</h1>
+    <h1>Select a city to find out its current weather and other facts.</h1>
     <li><a href="Chicago">Chicago</a></li>
     <li><a href="Tokyo">Tokyo</a></li>
 </body>
