--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,13 @@
     <title>Weather</title>
 </head>
 <body>
+
+    <form action ="#" method=""POST"></form>
+        <input type=""City" name="City" placeholder="Enter a city." value ="{{city if city}}"/>
+        <input type=""submit" value="submit"/>
+        
+
+
     <h1>Select a city to find out its current weather and other facts.</h1>
     <li><a href="Chicago">Chicago</a></li>
     <li><a href="Tokyo">Tokyo</a></li>
