--- a/templates/city.html
+++ b/templates/city.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    {% extends "base.html" %}
+    {% block title %}City{% endblock %}
+</head>
+{%block content %}
     <p> Hello {{ city }}</p>
     <p> Below is your weather and location.</p>
 
@@ -12,8 +20,7 @@
     <p> Current temperature_2m: {{ weather ["Current temperature_2m"] }} </p>
     <p> Hourly: {{ weather ["Hourly"] }} </p>
 
-
-    <p><a href="/">Go back </a></p>
-
+    <a href="/">Go back</a>
+{% endblock %}
 </html>
 
