--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
 
 
     <form action ="#" method="POST">
-        <input type=City" name="City" placeholder="Add a city." value ="{{city if city}}"/>
+        <input type="city" name="city" placeholder="Add a city." value ="{{city if city}}"/>
         <input type="submit" value="submit"/>
     </form>
 {% endblock %}
