It kinda works now.

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,8 +18,8 @@
 
 
 
-    <form action ="#" method="POST">
-        <input type="city" name="city" placeholder="Add a city." value ="{{city if city}}"/>
+    <form method="POST">
+        <input type="city" name="city" placeholder="Add a city." value = "New york">
         <input type="submit" value="submit"/>
     </form>
 {% endblock %}
