--- a/templates/data.html
+++ b/templates/data.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    {% extends "base.html" %}
     <h1>Data</h1>
     <style>
         table, th, td {
@@ -13,20 +12,21 @@
     </style>
 </head>
     <body>
+    {% extends "base.html" %}
     {% block content %}
         <table style="width:100%">
             <tr>
                 <th>City</th>
-                <th>Cooridnates</th>
+                <th>Coordinates</th>
                 <th>Elevation</th>
             </tr>
-            {% for city in cities %}
-                <tr>
-                    <td>{{cities[0]}}</td>
-                    <td>{{cities[1]}}</td>
-                    <td>{{cities[2]}}</td>
-                </tr>
-            {%endfor%}
+         {% for city in cities %}
+                        <tr>
+                            <td>{{ city[0] }}</td>
+                            <td>{{ city[1] }}</td>
+                            <td>{{ city[2] }}</td>
+                        </tr>
+                    {% endfor %}
             </table>
         {% endblock %}
     </body>
