--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
 
 
     <form method="POST">
-        <input type="city" name="city" placeholder="Add a city." value = "New york">
+        <input type="city" name="city" placeholder="Add a city" value = "">
         <input type="submit" value="submit"/>
     </form>
 {% endblock %}
