--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,6 @@
 <body>
 
 {%block content %}
-
     <h3>Select a city to find out its current weather and other facts.</h3>
     <li><a href="Chicago">Chicago</a></li>
     <li><a href="Tokyo">Tokyo</a></li>
@@ -22,6 +21,15 @@
         <input type="city" name="city" placeholder="Add a city" value = "">
         <input type="submit" value="submit"/>
     </form>
+
+            {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for msg in messages %}
+                    <p>{{msg}}</p>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+
 {% endblock %}
 
 </body>
